# GeomechX

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/geomechx_xdmf/: geomechx_xdmf.py  geomechx_xdmf_2.py  geomechx_xdmf_2_radial.py  geomechx_xdmf_2_radial_2.py
examples/input_files/Elasticity/IsotropicLinearElasticity/: 2d_square.geomechxrc  3D_cylinder.geomechxrc  3d_cubic.geomechxrc  borehole.geomechxrc  borehole_2d.geomechxrc  borehole_2d_quarter.geomechxrc  borehole_3d.geomechxrc
examples/input_files/Elasticity/TransverselyIsotropicLinearElasticity/: TI_3D_cubic.geomechxrc  TI_3D_cylinder.geomechxrc
examples/input_files/PoroElasticity/cryer_example/: transient_HM_cryer_3d.geomechxrc  transient_HM_cryer_3d_lowperm.geomechxrc  transient_HM_cryer_3d_times.geomechxrc
examples/input_files/PorousFluidFlow/SteadyDarcysFlow/: steadydarcy.geomechxrc  steadydarcy_2D.geomechxrc  steadydarcy_3D.geomechxrc
examples/input_files/PorousFluidFlow/TransientDarcysFlow/: transientdarcy_2D_p_bd.geomechxrc  transientdarcy_2D_p_bd_old.geomechxrc  transientdarcy_2D_q_bd.geomechxrc  transientdarcy_2D_q_bd_old.geomechxrc
examples/mesh/: 2D_1by1_triangular.msh  2D_HM_consolidation.msh  2D_THM_consolidation_240610.msh  2D_THM_consolidation_240730.msh  2D_TM_transient.msh  2D_TM_transient_2.msh  2D_borehole.msh  2D_borehole_quarter.msh  2D_fivelayers.msh  2D_gringarten_600mby35m.msh  2D_singlelayer.msh  2D_three_domaingroups.msh  2D_two_domaingroups.msh  2d_gringarten.msh  2d_two_domaingroups_heatsource.msh  2d_two_domaingroups_heatsource_2.msh  3D_DBD.msh  3D_DBD_finer.msh  3D_DBD_muchfiner.msh  3D_DBD_preliminary.msh  3D_HM_consolidation.msh  3D_HM_consolidation_2.msh  3D_Ref_nuclear_waste_disposal.msh  3D_Ref_nuclear_waste_disposal_finer_eunjin.msh  3D_Ref_nuclear_waste_disposal_finer_eunjin_mesh_along_z508.msh  3D_borehole.msh  3D_borehole_2.msh  3D_borehole_2elements_inZ.msh  3D_borehole_3.msh  3D_pointheatsource_THM.msh  3D_pointheatsource_cubic_THM.msh  3D_threelayers_Y_Z_axes.msh  cryer_8th_sphere_2.msh  cubic.msh  cubic_tetrahedralmesh.msh
examples/mesh/TI_rock_comsol/: cylinder_mesh.msh
src/Base/: Material.cpp  Material.hh  Mesh.cpp  Mesh.hh  Projection.cpp  Projection.hh  Property.cpp  Property.hh  petscheaders.hh
src/BoundaryCondition/: BCElasticity.cpp  BCElasticity.hh  BCPorousFluidFlow.cpp  BCPorousFluidFlow.hh  BCThermal.cpp  BCThermal.hh  BoundaryCondition.cpp  BoundaryCondition.hh
src/Mains/: IsotropicLinearElasticity_main.cpp  IsotropicLinearElasticity_main.hh  SteadyDarcysFlow_main.cpp  SteadyDarcysFlow_main.hh  SteadyThermal_main.cpp  SteadyThermal_main.hh  SteadyThermoElasticity_main.cpp  SteadyThermoElasticity_main.hh  TransientDarcysFlow_main.cpp  TransientDarcysFlow_main.hh  TransientPoroElasticity_main.cpp  TransientPoroElasticity_main.hh  TransientThermal_main.cpp  TransientThermal_main.hh  TransientThermoElasticity_main.cpp  TransientThermoElasticity_main.hh  TransientThermoPoroElasticity_main.cpp  TransientThermoPoroElasticity_main.hh  TransverselyIsotropicLinearElasticity_main.cpp  TransverselyIsotropicLinearElasticity_main.hh  main.cpp
src/Physics/: Elasticity.cpp  Elasticity.hh  IsotropicLinearElasticity.cpp  IsotropicLinearElasticity.hh  PoroElasticity.cpp  PoroElasticity.hh  PorousFluidFlow.cpp  PorousFluidFlow.hh  Problem.cpp  Problem.hh  SteadyDarcysFlow.cpp  SteadyDarcysFlow.hh  SteadyThermal.cpp  SteadyThermal.hh  SteadyThermoElasticity.cpp  SteadyThermoElasticity.hh  Thermal.cpp  Thermal.hh  ThermoElasticity.cpp  ThermoElasticity.hh  ThermoPoroElasticity.cpp  ThermoPoroElasticity.hh  TransientDarcysFlow.cpp  TransientDarcysFlow.hh  TransientPoroElasticity.cpp  TransientPoroElasticity.hh  TransientThermal.cpp  TransientThermal.hh  TransientThermoElasticity.cpp  TransientThermoElasticity.hh  TransientThermoPoroElasticity.cpp  TransientThermoPoroElasticity.hh  TransverselyIsotropicLinearElasticity.cpp  TransverselyIsotropicLinearElasticity.hh
src/PointwiseFunctions/: PF_Elasticity.cpp  PF_Elasticity.hh  PF_PoroElasticity.cpp  PF_PoroElasticity.hh  PF_PorousFluidFlow.cpp  PF_PorousFluidFlow.hh  PF_Problem.cpp  PF_Problem.hh  PF_Thermal.cpp  PF_Thermal.hh  PF_ThermoElasticity.cpp  PF_ThermoElasticity.hh  PF_ThermoPoroElasticity.cpp  PF_ThermoPoroElasticity.hh  PF_constants.cpp  PF_constants.hh
(+27 files in other folders)
